# wa-nlnz-toolkit

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml
notebook/: experiment_notebook.ipynb
notebook/iPRES2025/: exp-01_Accessing_NLNZ_WebArchive.ipynb  exp-01_WebArchive_Access_Fundamentals.ipynb  exp-02_WebArchive_Exploration_Analysis.ipynb  exp-03_Advanced_use_case.ipynb  exp-03_WebArchive_Advanced_Applications.ipynb  exp-04_WebArchive_QA_local.ipynb
notebook/iPRES2025/covid19_corpus/raw/: covid19_content_cleaned_2020-03-19.txt  covid19_content_cleaned_2020-04-07.txt  covid19_content_cleaned_2020-05-11.txt  covid19_content_cleaned_2020-06-08.txt  covid19_content_cleaned_2020-07-21.txt  covid19_content_cleaned_2020-08-12.txt  covid19_content_cleaned_2020-09-08.txt  covid19_content_cleaned_2020-12-03.txt  covid19_content_cleaned_2021-01-11.txt  covid19_content_cleaned_2021-02-02.txt  covid19_content_cleaned_2021-03-09.txt  covid19_content_cleaned_2021-04-13.txt  covid19_content_cleaned_2021-05-10.txt  covid19_content_cleaned_2021-06-14.txt  covid19_content_cleaned_2021-07-13.txt  covid19_content_cleaned_2021-08-10.txt  covid19_content_cleaned_2021-09-15.txt  covid19_content_cleaned_2021-10-19.txt  covid19_content_cleaned_2021-11-16.txt  covid19_content_cleaned_2021-12-14.txt  covid19_content_cleaned_2022-01-11.txt  (+21 more)
notebook/iPRES2025/sample_data/: level_1_subdomains.csv  url_counts.csv
src/wa-nlnz-toolkit/: example.py
src/wa_nlnz_toolkit/: __init__.py  aws.py  extract.py  query.py  screenshot.py  vis.py
tests/: test_example.py
(+168 files in other folders)
