[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wa_nlnz_toolkit"
version = "0.2.1"
description = "Web archive analysis toolkit for National Library New Zealand"
authors = [
  { name="Yizhe", email="yizhe.git@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "warcio>=1.7.4",
  "arrow>=1.3.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "boto3>=1.40.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "flake8>=6.0",
  "isort>=5.12",
]

[project.urls]
Homepage = "https://github.com/NLNZDigitalPreservation/wa-nlnz-toolkit"

[tool.setuptools]
license-files = []
